[workspace]
resolver = "2"
members = [
    "core",
    "futures",
    "graphics",
    "tiny_skia",
    "wgpu",
]

[workspace.package]
version = "0.13.0-dev"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
homepage = "https://iced.rs"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]

[workspace.dependencies]
iced_core = { version = "0.13.0-dev", path = "core" }
iced_futures = { version = "0.13.0-dev", path = "futures" }
iced_graphics = { version = "0.13.0-dev", path = "graphics" }
iced_tiny_skia = { version = "0.13.0-dev", path = "tiny_skia" }
iced_wgpu = { version = "0.13.0-dev", path = "wgpu" }

async-std = "1.0"
bitflags = "2.0"
bytemuck = { version = "1.0", features = ["derive"] }
cosmic-text = "0.10"
dark-light = "1.0"
futures = "0.3"
glam = "0.27"
glyphon = { git = "https://github.com/hecrj/glyphon.git", rev = "3425efd52244bde6f401bb6e47f60e81da921ff4" }
guillotiere = "0.6"
half = "2.2"
image = "0.25"
kamadak-exif = "0.5"
kurbo = "0.11"
log = "0.4"
lyon = "1.0"
lyon_path = "1.0"
num-traits = "0.2"
once_cell = "1.0"
ouroboros = "0.18"
palette = "0.7"
qrcode = { version = "0.14", default-features = false }
raw-window-handle = "0.5"
resvg = "0.36"
rustc-hash = "1.0"
smol = "2.0"
smol_str = "0.2"
softbuffer = "0.3.2"
syntect = "5.1"
sysinfo = "0.30"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = "1.0"
tracing = "0.1"
unicode-segmentation = "1.0"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = "=0.3.64"
web-time = "0.2"
wgpu = "0.18"
winapi = "0.3"
window_clipboard = "0.4.1"
winit = { git = "https://github.com/iced-rs/winit.git", rev = "592bd152f6d5786fae7d918532d7db752c0d164f", features = [
    "rwh_05",
] }
