[package]
name = "iced_graphics"
description = "A bunch of backend-agnostic types that can be leveraged to build a renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
fira-sans = []

[dependencies]
iced_core.workspace = true
iced_futures.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
cosmic-text.workspace = true
half.workspace = true
log.workspace = true
once_cell.workspace = true
raw-window-handle.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
image.workspace = true
kamadak-exif.workspace = true
lyon_path.workspace = true
