[package]
name = "iced_wgpu"
description = "A renderer for iced on top of wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
webgl = ["wgpu/webgl"]

[dependencies]
iced_graphics.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
futures.workspace = true
glam.workspace = true
glyphon.workspace = true
guillotiere.workspace = true
log.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
wgpu.workspace = true

lyon.workspace = true

resvg = { workspace = true, features = ["text"] }

tracing.workspace = true
